# ai-puzzle-suite-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/puzzles/: eight_puzzle.rs  eight_queens.rs  missionaries_cannibals.rs  mod.rs  xor_tic_tac_toe.rs
src/search/: mod.rs  solver.rs  state.rs
src/ui/: mod.rs
