[package]
name = "ai-puzzle-suite-tui"
version = "0.1.0"
edition = "2021"
authors = ["Adel Enazi"]
description = "A terminal-based interactive puzzle suite demonstrating the A* search algorithm through classic AI problems. Features four puzzles with real-time algorithm visualization and educational content."
license = "MIT"
readme = "README.md"

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
parking_lot = "0.12"
rand = "0.8"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

